--- a/Video.html
+++ b/Video.html
@@ -34,14 +34,13 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="eLearning.html">eLearning</a></li>
-					<li><a href="Video.html">Video</a></li>
-					<li><a href="Other.html">Other Projects</a></li>
+					<li><a href="eLearning.html">e-Learning</a></li>
+					<li class="active"><a href="Video.html">Videos</a></li>
+					<li><a href="Other.html">Other Services</a></li>
 					<li><a href="contact.html">Contact</a></li>
-
-				</ul>
+					</ul>
 			</div>
 			<!--/.nav-collapse -->
 		</div>
@@ -52,22 +51,25 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-8">
-					<h1>Instructional Video</h1>
+					<h1>Videos</h1>
 				</div>
 			</div>
 		</div>
 	</header>
 
 	<!-- container -->
+
 	<section class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<section id="portfolio" class="page-section section appear clearfix">
-					<br />
-					
-			      				    <p>An instructional video helps companies guide their customers through complications and difficult situations with a simple and well informed visual. Instructional videos help provide knowledge of a product or its working method to the clients in an interactive, effective and engaging way.&nbsp;
-										<br />
-                  </p>
+        <div class="row">
+            <!-- main content -->
+            <section class="col-sm-8 maincontent col-lg-12">
+                <h3>1. Awareness Videos</h3>
+                <p>
+		
+				 <p>An Awareness Video can be a powerful tool in a lot of different situations. It can be used to: Draw attention to key issues that matter to you and your organization. Raise awareness about key messages in the learning process or content. Inspire people to act, by spreading the message or taking a specific action.&nbsp;</p>
+
+    </section>
+<section class="container">
 <div class="row">
 				<div class="col-md-12">
 				<div class="row">
@@ -75,51 +77,74 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project0.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Video1.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project0/story_html5.html" target="_blank" class="fancybox">
+										<a href="../Deloitte/Content/Video1.mp4" class="fancybox">
 											<h5>Automotive Client</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
 							    </div>
 						    </div>
-					    </article>
+      </article>
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project1.jpg" alt="" />
+								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project1/story_html5.html" target="_blank" class="fancybox">
-											<h5>Automotive Industry</h5>
+										<a href="#" target="_blank" class="fancybox">
+											<h5>Coming Soon</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
 							    </div>
 						    </div>
 					    </article>
-
+	
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project2/story_html5.html" target="_blank" class="fancybox">
-											<h5>Project 5</h5>
+										<a href="#" target="_blank" class="fancybox">
+											<h5>Coming Soon</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
 							    </div>
 						    </div>
 					    </article>
+						</section>
+<section class="container">
+        <div class="row">
+            <!-- main content -->
+            <section class="col-sm-8 maincontent col-lg-12">
+                <h3>2. Instructional Videos</h3>
+                <p>
+		
+				 <p>Instructional Video helps companies guide their customers through complications and difficult situations with a simple and well informed visual. Instructional Videos help provide knowledge of a product or its working method to the clients in an interactive, effective and engaging way.</p>
 
+    </section>		
 						<article class="col-sm-4 isotopeItem video">
 							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Video1.jpg" alt="" />
+								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Deloitte/Content/Video1.mp4" class="fancybox">
-											<h5>Our Framework</h5>
+										<a href="#" class="fancybox">
+											<h5>Coming Soon</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+					      </div>
+	      </article>
+
+						<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="#" target="_blank" class="fancybox">
+											<h5>Coming Soon</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
 							    </div>
@@ -128,23 +153,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project3.jpg" alt="" />
+								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project3/story_html5.html" target="_blank" class="fancybox">
-											<h5>Froject 3</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project4.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project4/index.html" target="_blank" class="fancybox">
+										<a href="#" target="_blank" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -152,45 +164,8 @@
 						    </div>
 					    </article>
 
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project5.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project5/story_html5.html" target="_blank" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem other">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem other">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-				    </div>
+	
+	    </div>
 
 			    </div>
 
@@ -198,9 +173,9 @@
 		    </div>
 		  </div>
 
-				</section>
-			</div>
-		</div>
+	  </section>
+		  </div>
+	  </div>
 
 	</section>
 	<!-- /container -->
