--- a/Other.html
+++ b/Other.html
@@ -34,14 +34,13 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="eLearning.html">eLearning</a></li>
-					<li><a href="Video.html">Video</a></li>
-					<li><a href="Other.html">Other Projects</a></li>
+					<li><a href="eLearning.html">e-Learning</a></li>
+					<li><a href="Video.html">Videos</a></li>
+					<li class="active"><a href="Other.html">Other Services</a></li>
 					<li><a href="contact.html">Contact</a></li>
-
-				</ul>
+					</ul>
 			</div>
 			<!--/.nav-collapse -->
 		</div>
@@ -52,7 +51,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-8">
-					<h1>Other Projects</h1>
+					<h1>Other Services</h1>
 				</div>
 			</div>
 		</div>
