--- a/about.html
+++ b/about.html
@@ -38,14 +38,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="eLearning.html">eLearning</a></li>
-					<li><a href="Video.html">Video</a></li>
-					<li><a href="Other.html">Other Projects</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li class="active"><a href="about.html">About</a></li>
+					<li><a href="eLearning.html">e-Learning</a></li>
+					<li><a href="Video.html">Videos</a></li>
+					<li><a href="Other.html">Other Services</a></li>
 					<li><a href="contact.html">Contact</a></li>
-
-				</ul>
+					</ul>
 			</div>
 			<!--/.nav-collapse -->
 		</div>
