--- a/Other.html
+++ b/Other.html
@@ -64,134 +64,8 @@
 				<section id="portfolio" class="page-section section appear clearfix">
 					<br />
 					
-			      				    <p>An instructional video helps companies guide their customers through complications and difficult situations with a simple and well informed visual. Instructional videos help provide knowledge of a product or its working method to the clients in an interactive, effective and engaging way.&nbsp;
-										<br />
+			      				    <p>Our digital learning solutions can be easily integrated in your business environment, using top-notch methodologies for upgrading your employees’ learning journeys. Further services from our learning portfolio are: <br>
                   </p>
-<div class="row">
-				<div class="col-md-12">
-				<div class="row">
-					<div class="portfolio-items isotopeWrapper clearfix" id="3">
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project0.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project0/story_html5.html" target="_blank" class="fancybox">
-											<h5>Automotive Client</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project1.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project1/story_html5.html" target="_blank" class="fancybox">
-											<h5>Automotive Industry</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project2/story_html5.html" target="_blank" class="fancybox">
-											<h5>Project 5</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem video">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Video1.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="../Deloitte/Content/Video1.mp4" class="fancybox">
-											<h5>Our Framework</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project3.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project3/story_html5.html" target="_blank" class="fancybox">
-											<h5>Froject 3</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project4.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project4/index.html" target="_blank" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Project5.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project5/story_html5.html" target="_blank" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem other">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem other">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-				    </div>
-
-			    </div>
 
 
 		    </div>
