--- a/Video.html
+++ b/Video.html
@@ -90,11 +90,11 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/pic/fuse.png" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="#" target="_blank" class="fancybox">
-											<h5>Coming Soon</h5>
+										<a href="../Deloitte/Content/Fuse.mp4" target="_blank" class="fancybox">
+											<h5>Awareness Video</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
 							    </div>
@@ -104,11 +104,11 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/pic/rise.png" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="#" target="_blank" class="fancybox">
-											<h5>Coming Soon</h5>
+										<a href="../Deloitte/Content/RISE.mp4" target="_blank" class="fancybox">
+											<h5>Automotive Client</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
 							    </div>
@@ -118,51 +118,14 @@
 <section class="container">
         <div class="row">
             <!-- main content -->
-            <section class="col-sm-8 maincontent col-lg-12">
+            <section class="col-sm-8 maincontent col-lg-12 col-md-12">
                 <h3>2. Instructional Videos</h3>
                 <p>
 		
 				 <p>Instructional Video helps companies guide their customers through complications and difficult situations with a simple and well informed visual. Instructional Videos help provide knowledge of a product or its working method to the clients in an interactive, effective and engaging way.</p>
 
     </section>		
-						<article class="col-sm-4 isotopeItem video">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="#" class="fancybox">
-											<h5>Coming Soon</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-					      </div>
-	      </article>
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="#" target="_blank" class="fancybox">
-											<h5>Coming Soon</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem eLearning">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/pic/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="#" target="_blank" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
+						
 
 	
 	    </div>
