--- a/eLearning.html
+++ b/eLearning.html
@@ -160,10 +160,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/pic/project8.png" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project8/story.html" class="fancybox">
 											<h5>Coming Soon</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
