--- a/Video.html
+++ b/Video.html
@@ -6,15 +6,15 @@
 	<meta name="description" content="Deloitte Digital Learning - Our Projects">
 	<meta name="author" content="webThemez.com">
 	<title>Deloitte Digital Learning - Our Projects</title>
-	<link rel="favicon" href="../Deloitte/assets/images/favicon.png">
+	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-	<link rel="stylesheet" href="../Deloitte/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../Deloitte/assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<!-- Custom styles for our template -->
-	<link rel="stylesheet" href="../Deloitte/assets/css/bootstrap-theme.css" media="screen">
+	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen">
 	<link rel="stylesheet" type="text/css" href="../Deloitte/assets/css/isotope.css" media="screen" />
-	<link rel="stylesheet" href="../Deloitte/assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="../Deloitte/assets/css/style.css">
+	<link rel="stylesheet" href="assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
@@ -29,17 +29,17 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-				<a class="navbar-brand" href="../Deloitte/index.html">
-					<img src="../Deloitte/assets/images/logo.png" alt="Deloitte"></a>
+				<a class="navbar-brand" href="index.html">
+					<img src="assets/images/logo.png" alt="Deloitte"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li><a href="../Deloitte/index.html">Home</a></li>
-					<li><a href="../Deloitte/about.html">About</a></li>
-					<li><a href="../Deloitte/eLearning.html">e-Learning</a></li>
-					<li class="active"><a href="../Deloitte/Video.html">Videos</a></li>
-					<li><a href="../Deloitte/Other.html">Other Services</a></li>
-					<li><a href="../Deloitte/contact.html">Contact</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="eLearning.html">e-Learning</a></li>
+					<li class="active"><a href="Video.html">Videos</a></li>
+					<li><a href="Other.html">Other Services</a></li>
+					<li><a href="contact.html">Contact</a></li>
 					</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -179,9 +179,9 @@
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="../Deloitte/assets/js/jquery.cslider.js"></script>
-	<script src="../Deloitte/assets/js/jquery.isotope.min.js"></script>
-	<script src="../Deloitte/assets/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-	<script src="../Deloitte/assets/js/custom.js"></script>
+	<script src="assets/js/jquery.cslider.js"></script>
+	<script src="assets/js/jquery.isotope.min.js"></script>
+	<script src="assets/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script src="assets/js/custom.js"></script>
 </body>
 </html>
