--- a/projects.html
+++ b/projects.html
@@ -6,15 +6,15 @@
 	<meta name="description" content="Deloitte Digital Learning - Our Projects">
 	<meta name="author" content="webThemez.com">
 	<title>Deloitte Digital Learning - Our Projects</title>
-	<link rel="favicon" href="../Testerdc/assets/images/favicon.png">
+	<link rel="favicon" href="../Deloitte/assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-	<link rel="stylesheet" href="../Testerdc/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../Testerdc/assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/font-awesome.min.css">
 	<!-- Custom styles for our template -->
-	<link rel="stylesheet" href="../Testerdc/assets/css/bootstrap-theme.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="../Testerdc/assets/css/isotope.css" media="screen" />
-	<link rel="stylesheet" href="../Testerdc/assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="../Testerdc/assets/css/style.css">
+	<link rel="stylesheet" href="../Deloitte/assets/css/bootstrap-theme.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="../Deloitte/assets/css/isotope.css" media="screen" />
+	<link rel="stylesheet" href="../Deloitte/assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="../Deloitte/assets/css/style.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
@@ -29,26 +29,26 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-				<a class="navbar-brand" href="../Testerdc/index.html">
-					<img src="../Testerdc/assets/images/logo.png" alt="Techro HTML5 template"></a>
+				<a class="navbar-brand" href="../Deloitte/index.html">
+					<img src="../Deloitte/assets/images/logo.png" alt="Techro HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li><a href="../Testerdc/index.html">Home</a></li>
-					<li><a href="../Testerdc/about.html">About</a></li>
-						<li><a href="../Testerdc/services.html">Services</a></li>
-					<li><a href="../Testerdc/price.html">Price</a></li>
-					<li class="active"><a href="../Testerdc/projects.html">Projects</a></li>
+					<li><a href="../Deloitte/index.html">Home</a></li>
+					<li><a href="../Deloitte/about.html">About</a></li>
+						<li><a href="../Deloitte/services.html">Services</a></li>
+					<li><a href="../Deloitte/price.html">Price</a></li>
+					<li class="active"><a href="../Deloitte/projects.html">Projects</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="../Testerdc/sidebar-right.html">Right Sidebar</a></li>
+							<li><a href="../Deloitte/sidebar-right.html">Right Sidebar</a></li>
 							<li><a href="#">Dummy Link1</a></li>
 							<li><a href="#">Dummy Link2</a></li>
 							<li><a href="#">Dummy Link3</a></li>
 						</ul>
 					</li>
-					<li><a href="../Testerdc/contact.html">Contact</a></li>
+					<li><a href="../Deloitte/contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -90,10 +90,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project0.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project0.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project0/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project0/story_html5.html" target="_blank" class="fancybox">
 											<h5>Automotive Client</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -103,10 +103,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project1.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project1.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project1/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project1/story_html5.html" target="_blank" class="fancybox">
 											<h5>Automotive Industry</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -117,10 +117,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project2/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project2/story_html5.html" target="_blank" class="fancybox">
 											<h5>Project 5</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -130,10 +130,10 @@
 
 						<article class="col-sm-4 isotopeItem video">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Video1.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Video1.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/Content/Video1.mp4" class="fancybox">
+										<a href="../Deloitte/Content/Video1.mp4" class="fancybox">
 											<h5>Our Framework</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -143,10 +143,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project3.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project3.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project3/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project3/story_html5.html" target="_blank" class="fancybox">
 											<h5>Froject 3</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -156,10 +156,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project4.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project4.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project4/index.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project4/index.html" target="_blank" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -169,10 +169,10 @@
 
 						<article class="col-sm-4 isotopeItem eLearning">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Project5.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Project5.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="https://ottdigitallearning.github.io/Testerdc/Content/Project5/story_html5.html" target="_blank" class="fancybox">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project5/story_html5.html" target="_blank" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -182,10 +182,10 @@
 
 						<article class="col-sm-4 isotopeItem other">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/images/portfolio/Soon2.jpg" class="fancybox">
+										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -195,10 +195,10 @@
 
 						<article class="col-sm-4 isotopeItem other">
 							<div class="portfolio-item">
-								<img src="../Testerdc/assets/images/portfolio/Soon2.jpg" alt="" />
+								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Testerdc/images/portfolio/Soon2.jpg" class="fancybox">
+										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
 											<h5>Project Title</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -228,12 +228,12 @@
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="simplenav">
-								<a href="../Testerdc/index.html">Home</a> | 
-								<a href="../Testerdc/about.html">About</a> |
-								<a href="../Testerdc/services.html">Services</a> |
-								<a href="../Testerdc/price.html">Price</a> |
-								<a href="../Testerdc/projects.html">Projects</a> |
-								<a href="../Testerdc/contact.html">Contact</a>
+								<a href="../Deloitte/index.html">Home</a> | 
+								<a href="../Deloitte/about.html">About</a> |
+								<a href="../Deloitte/services.html">Services</a> |
+								<a href="../Deloitte/price.html">Price</a> |
+								<a href="../Deloitte/projects.html">Projects</a> |
+								<a href="../Deloitte/contact.html">Contact</a>
 							</p>
 						</div>
 					</div>
@@ -257,9 +257,9 @@
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="../Testerdc/assets/js/jquery.cslider.js"></script>
-	<script src="../Testerdc/assets/js/jquery.isotope.min.js"></script>
-	<script src="../Testerdc/assets/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-	<script src="../Testerdc/assets/js/custom.js"></script>
+	<script src="../Deloitte/assets/js/jquery.cslider.js"></script>
+	<script src="../Deloitte/assets/js/jquery.isotope.min.js"></script>
+	<script src="../Deloitte/assets/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script src="../Deloitte/assets/js/custom.js"></script>
 </body>
 </html>
