--- a/eLearning.html
+++ b/eLearning.html
@@ -164,38 +164,13 @@
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
 										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project8/story.html" class="fancybox">
-											<h5>Coming Soon</h5>
+											<h5>System Simulation</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
 							    </div>
 						    </div>
 					    </article>
 
-						<article class="col-sm-4 isotopeItem other">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
-											<h5>Project Title</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
-
-						<article class="col-sm-4 isotopeItem other">
-							<div class="portfolio-item">
-								<img src="../Deloitte/assets/images/portfolio/Soon2.jpg" alt="" />
-								<div class="portfolio-desc align-center">
-									<div class="folio-info">
-										<a href="../Deloitte/images/portfolio/Soon2.jpg" class="fancybox">
-											<h5>Coming Soon</h5>
-											<i class="fa fa-link fa-2x"></i></a>
-								    </div>
-							    </div>
-						    </div>
-					    </article>
 				    </div>
 
 			    </div>
