--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="caption">
                                     <div class="blur"></div>
                                     <div class="caption-text">
-                                         <h3>System Training<br>
+                                         <h3>System Symulation<br>
                                            (CRM Tool)<br>
                                          </h3> 
                                         <a class="btn btn-default" href="https://ottdigitallearning.github.io/Deloitte/Content/Project8/story.html" target="_blank" class="fancybox">Launch E-Learning</i></a>
