--- a/Video.html
+++ b/Video.html
@@ -93,7 +93,7 @@
 								<img src="../Deloitte/assets/images/pic/fuse.png" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a data-fancybox data-width="640" data-height="360" href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/Video3.mp4" class="fancybox">
+										<a data-fancybox data-width="640" data-height="360" href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/Video3.mp4">
 											<h5>Awareness Video</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
