--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-3 col-sm-6">
                             <div class="cuadro_intro_hover " style="background-color:#cccccc;">
                                 <p style="text-align:center;">
-                                    <img src="assets/images/pic/Project3.jpg" class="img-responsive" alt="">
+                                    <img src="assets/images/pic/project9.png" class="img-responsive" alt="">
                                 </p>
                                 <div class="caption">
                                     <div class="blur"></div>
                                     <div class="caption-text">
-                                         <h3>System Training <br>
-                                         (Performance Management)</h3> 
-                                        <a class=" btn btn-default" href="https://ottdigitallearning.github.io/Deloitte/Content/Project3/story_html5.html" target="_blank" class="fancybox">Launch E-Learning</i></a>
+                                         <h3>System & Process Training <br>
+                                         (SAP SuccessFactors)</h3> 
+                                        <a class=" btn btn-default" href="https://ottdigitallearning.github.io/Deloitte/Content/Project9/story.html" target="_blank" class="fancybox">Launch E-Learning</i></a>
                                     </div>
                                 </div>
                             </div>                        
