--- a/eLearning.html
+++ b/eLearning.html
@@ -170,7 +170,18 @@
 							    </div>
 						    </div>
 					    </article>
-
+							<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/project9.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://ottdigitallearning.github.io/Deloitte/Content/Project9/story.html" class="fancybox">
+											<h5>System & Process Simulation</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+					    </article>
 				    </div>
 
 			    </div>
