--- a/Video.html
+++ b/Video.html
@@ -130,6 +130,39 @@
 	
 	    </div>
 
+    </section>
+<section class="container">
+<div class="row">
+				<div class="col-md-12">
+				<div class="row">
+					<div class="portfolio-items isotopeWrapper clearfix" id="3">
+
+						<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/Video3.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="../Deloitte/Content/Media1.mp4" class="fancybox">
+											<h5>Platform presentation</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
+
+						<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/Video4.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a data-fancybox data-width="640" data-height="360" href="../Deloitte/Content/Media5.mp4" target="_blank">
+											<h5>Content Presentation</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+
+						</section>
 			    </div>
 
 
