--- a/Video.html
+++ b/Video.html
@@ -142,7 +142,7 @@
 								<img src="../Deloitte/assets/images/pic/Video3.png" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a href="../Deloitte/Content/Media1.mp4" class="fancybox">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/Media1.mp4" class="fancybox">
 											<h5>Platform presentation</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
@@ -155,7 +155,7 @@
 								<img src="../Deloitte/assets/images/pic/Video4.png" alt="" />
 								<div class="portfolio-desc align-center">
 									<div class="folio-info">
-										<a data-fancybox data-width="640" data-height="360" href="../Deloitte/Content/Media5.mp4" target="_blank">
+										<a data-fancybox data-width="640" data-height="360" href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/Media5.mp4" target="_blank">
 											<h5>Content Presentation</h5>
 											<i class="fa fa-link fa-2x"></i></a>
 								    </div>
