--- a/Video.html
+++ b/Video.html
@@ -161,7 +161,56 @@
 								    </div>
 							    </div>
 						    </div>
-
+						</article>
+												<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/Instruction1.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/Instruction1.mp4" class="fancybox">
+											<h5>Data security example</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
+												<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/Instruction2.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/Instruction2.mp4" class="fancybox">
+											<h5>DATA SECURITY EXAMPLE</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
+												<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/Instruction3.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/Instruction3.mp4" class="fancybox">
+											<h5>DATA SECURITY EXAMPLE</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
+												<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/instruct4.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/Instruction4.mp4" class="fancybox">
+											<h5>DATA SECURITY EXAMPLE</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
+						
 						</section>
 			    </div>
 
