--- a/Video.html
+++ b/Video.html
@@ -210,6 +210,54 @@
 							    </div>
 						    </div>
       </article>
+																		<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/dmlr2.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/dmlr2.mp4" class="fancybox">
+											<h5>Process Presentation</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
+																		<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/dmlr1.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/dmlr1.mp4" class="fancybox">
+											<h5>Introduction MyContribution</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
+																		<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/dmlr3.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/dmlr3.mp4" class="fancybox">
+											<h5>Intro-Sequence eLearning</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
+																		<article class="col-sm-4 isotopeItem eLearning">
+							<div class="portfolio-item">
+								<img src="../Deloitte/assets/images/pic/dmlr4.png" alt="" />
+								<div class="portfolio-desc align-center">
+									<div class="folio-info">
+										<a href="https://deloittedigitalro.s3.us-east-2.amazonaws.com/dmlr4.mp4" class="fancybox">
+											<h5>Transition Element</h5>
+											<i class="fa fa-link fa-2x"></i></a>
+								    </div>
+							    </div>
+						    </div>
+      </article>
 						
 						</section>
 			    </div>
