--- a/eLearning.html
+++ b/eLearning.html
@@ -64,7 +64,7 @@
 				<section id="portfolio" class="page-section section appear clearfix">
 					<br />
 					
-			      				    <p><strong>eLearning</strong> is the combined use of physical hardware, software, and educational theory and practice to facilitate learning. Educational technology creates, uses, and manages technological processes and educational resources to help improve user performance. <br>
+			      				    <p><strong>eLearning</strong> is the combined use of physical hardware, software, and educational theory and practice to facilitate learning. Educational technology creates, uses, and manages technological processes and educational resources to help improve user performance.&nbsp; <br>
                   </p>
 <div class="row">
 				<div class="col-md-12">
